CostalCloud/force-app/main/default/objects/Appliance__c.object
<CustomObject>
    <fields>
        <fullName>Appliance_Measurement_Image__c</fullName>
        <label>Appliance Measurement Image</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Appliance_Notes__c</fullName>
        <label>Appliance Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Appliance_Photo__c</fullName>
        <label>Appliance Photo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Depth_Fraction__c</fullName>
        <label>Depth Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fraction_values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depth__c</fullName>
        <label>Depth</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>disco__Form__c</referenceTo>
        <relationshipLabel>Appliances</relationshipLabel>
        <relationshipName>Appliances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Height_Fraction__c</fullName>
        <label>Height Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fraction_values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Heigth__c</fullName>
        <label>Heigth</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Measure_L_or_R__c</fullName>
        <label>Measure L or R</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model_Desc_Fraction__c</fullName>
        <label>Model # / Desc Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fraction_values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model_Desc__c</fullName>
        <label>Model # / Desc</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stove/Range</fullName>
                </value>
                <value>
                    <fullName>In-Wall Oven</fullName>
                </value>
                <value>
                    <fullName>Cook Top</fullName>
                </value>
                <value>
                    <fullName>Refrigerator</fullName>
                </value>
                <value>
                    <fullName>Washing machine</fullName>
                </value>
                <value>
                    <fullName>Clothes dryer</fullName>
                </value>
                <value>
                    <fullName>Washer/Dryer Combo</fullName>
                </value>
                <value>
                    <fullName>Dishwasher</fullName>
                </value>
                <value>
                    <fullName>Microwave</fullName>
                </value>
                <value>
                    <fullName>Vent Hood</fullName>
                </value>
                <value>
                    <fullName>Garbage Disposal</fullName>
                </value>
                <value>
                    <fullName>Freezer - Chest</fullName>
                </value>
                <value>
                    <fullName>Freezer - Upright</fullName>
                </value>
                <value>
                    <fullName>Icemaker</fullName>
                </value>
                <value>
                    <fullName>Drying Cabinet</fullName>
                </value>
                <value>
                    <fullName>Electric Heater</fullName>
                </value>
                <value>
                    <fullName>Proofer</fullName>
                </value>
                <value>
                    <fullName>Water Treatment</fullName>
                </value>
                <value>
                    <fullName>Television set</fullName>
                </value>
                <value>
                    <fullName>Fan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wall__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wall</label>
        <referenceTo>Walls__c</referenceTo>
        <relationshipLabel>Appliances</relationshipLabel>
        <relationshipName>Appliances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wall_to_Center_Fraction__c</fullName>
        <label>Wall to Center Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fraction_values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wall_to_Center__c</fullName>
        <label>Wall to Center</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Width_Fraction__c</fullName>
        <label>Width Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fraction_values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Appliance</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Appliance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appliances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>